--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -8,8 +8,8 @@ header
           span.icon-bar
           span.icon-bar
         a#brand.navbar-brand(href="/home")
-          //img#ontrac-img(alt="Brand", src="http://i.imgur.com/edRmazN.png")
-          | OnTrac
+          img#ontrac-img(title="Logo by John Chiaramonte 2B-2", src="/images/logo.png")
+          //| OnTrac
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li
