Logo on homepage

--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -8,8 +8,7 @@ header
           span.icon-bar
           span.icon-bar
         a#brand.navbar-brand(href="/home")
-          img#ontrac-img(title="Logo by John Chiaramonte 2B-2", src="/images/logo.png")
-          //| OnTrac
+          img#ontrac-img(title="Homepage.", src="/images/logo.png")
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li
