--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -5,7 +5,7 @@ block content
     include /info
     .alert.alert-danger #[b WARNING:] OnTrac is in Alpha and should not yet be used for a reliable organization platform. Thank you for being an Alpha Tester!
     .jumbotron
-      img.right.hidden-xs(style="width: 100%; max-width: 300px;", src="http://www.xavierhs.org/s/81/images/editor/tom/regis.jpg")
+      img.right.hidden-xs(title="Logo by the amazing John Chiaramonte.", style="width: 100%; max-width: 200px;", src="/images/logo.png")
       h1 Welcome To OnTrac
       
       p.
