--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -1,7 +1,8 @@
 aside#sidebar
   br
   section.center  
-    img#sidebar-pic.user-badge(title="Looking good!", src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", data-username=currentUser.username)
+    a(href="/users/"+currentUser.username)
+      img#sidebar-pic(title="Looking good!", src="https://webeim.regis.org/photos/regis/Student/"+currentUser.code+".jpg", onError="this.onerror=null;this.src='"+currentUser.mpicture+"';")
     br
     #user-status.dropdown
       b.dropdown-toggle(data-toggle="dropdown") Online
