User profile is more accessible

--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -56,6 +56,8 @@ header
                   li
                     a(href="/users/"+currentUser.username, title="View your public profile as other users see it.") View Profile
                   li
+                    a(href="/users/"+currentUser.username+"/schedule", title="View your class schedule.")
+                  li
                     a(href="/users/profile") Edit Profile
                   li
                       a(href='/logout') Logout
