--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -91,12 +91,17 @@ block content
       .col-xs-12
         hr
         if user !== false
-          .btn-group.dropup
+          .hidden-xs
+            a.btn.btn-default(href="/users/"+user.username+"/schedule", title="View "+user.firstName+"'s schedule.'") View Schedule
+            a.btn.btn-default(href="mailto:"+user.email) Email #{user.firstName}
+            a.btn.btn-info(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
+          
+          .btn-group.dropup.visible-xs
             button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Actions &nbsp;
               span.caret
               span.sr-only Toggle Dropdown
             ul.dropdown-menu
-              li.hidden-xs
+              li
                 a(href="/users/"+user.username+"/schedule") View Schedule
               li
                 a(href="mailto:"+user.email) Email
