--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -56,7 +56,7 @@ header
                   li
                     a(href="/users/"+currentUser.username, title="View your public profile as other users see it.") View Profile
                   li
-                    a(href="/users/"+currentUser.username+"/schedule", title="View your class schedule.")
+                    a(href="/users/"+currentUser.username+"/schedule", title="View your class schedule.") Your Schedule
                   li
                     a(href="/users/profile") Edit Profile
                   li
