--- a/views/users/schedule.jade
+++ b/views/users/schedule.jade
@@ -1,4 +1,6 @@
 extends /layout
 
 block content
-  iframe#schedule(src="http://intranet.regis.org/infocenter/schedule/Print.cfm?StudentCode="+user.code+"&showweek=0&Print=1&NoShading=0")
+  .container-fluid
+    !{user.schedule}
+  //iframe#schedule(src="http://intranet.regis.org/infocenter/schedule/Print.cfm?StudentCode="+user.code+"&showweek=0&Print=1&NoShading=0")
