--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -88,15 +88,16 @@ block content
                 +class(c)
       
     .row
-      .col-xs-12
-        hr
-        if user !== false
-          .hidden-xs
-            a.btn.btn-default(href="/users/"+user.username+"/schedule", title="View "+user.firstName+"'s schedule.'") View Schedule
-            a.btn.btn-default(href="mailto:"+user.email) Email #{user.firstName}
-            a.btn.btn-info(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
-          
-          .btn-group.dropup.visible-xs
+    
+      hr
+      if user !== false
+        .col-xs-12.col-sm-9.hidden-xs
+          a.btn.btn-default(href="/users/"+user.username+"/schedule", title="View "+user.firstName+"'s schedule.'") View Schedule
+          a.btn.btn-default(href="mailto:"+user.email) Email #{user.firstName}
+          a.btn.btn-default(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
+        
+        .col-xs-9.visible-xs
+          .btn-group.dropup
             button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Actions &nbsp;
               span.caret
               span.sr-only Toggle Dropdown
@@ -107,8 +108,8 @@ block content
                 a(href="mailto:"+user.email) Email
               li
                 a(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
-                
-        a.btn.btn-primary(href="/users") Back to User List
+      .col-xs-3
+        a.right.btn.btn-primary(href="/users") Back to User List
       
 mixin class(course)
   .col-xs-12.col-sm-6.col-md-4
