--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -39,6 +39,7 @@ block content
       if teacher != false
         hr
         a.btn.btn-default(href="http://moodle.regis.org/user/profile.php?id="+teacher.mID, target="_blank") Moodle Page
+        a.btn.btn-default(href="mailto:"+teacher.email) Email
       a.btn.btn-primary(href="/teachers") Back to Teachers
     
 mixin class(course)
