--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -88,10 +88,9 @@ block content
                 +class(c)
       
     .row
-    
       hr
       if user !== false
-        .col-xs-12.col-sm-9.hidden-xs
+        .col-sm-9.hidden-xs
           a.btn.btn-default(href="/users/"+user.username+"/schedule", title="View "+user.firstName+"'s schedule.'") View Schedule
           a.btn.btn-default(href="mailto:"+user.email) Email #{user.firstName}
           a.btn.btn-default(href="http://moodle.regis.org/user/profile.php?id="+user.mID) Moodle Profile
