Fixed user list table heading

--- a/views/users/list.jade
+++ b/views/users/list.jade
@@ -59,6 +59,7 @@ block content
       .col-xs-12
         table.table.user-table
           thead
+            th Picture
             th Advisement
             th Grade
             th Name
