Optimized schedule routing

--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -2,6 +2,8 @@ extends /layout
 
 block content
   .container
-    !{user.schedule}
+    !{schedule}
     br
     a.btn.btn-primary(href="http://intranet.regis.org/infocenter/schedule/Print.cfm?StudentCode="+user.code+"&showweek=0&Print=1&NoShading=0") PDF
+  
+    
