--- a/views/teachers/profile.jade
+++ b/views/teachers/profile.jade
@@ -39,7 +39,7 @@ block content
       hr
       if teacher !== false
         .col-sm-9.hidden-xs
-          a.btn.btn-default(href="/teacher/"+teacher.mID+"/schedule", title="View this teacher's schedule.'") View Schedule
+          a.btn.btn-default(href="/teachers/"+teacher.mID+"/schedule", title="View this teacher's schedule.'") View Schedule
           a.btn.btn-default(href="mailto:"+teacher.email) Email
           a.btn.btn-default(href="http://moodle.regis.org/user/profile.php?id="+teacher.mID) Moodle Profile
         
