--- a/views/schedule.jade
+++ b/views/schedule.jade
@@ -2,8 +2,8 @@ extends /layout
 
 block content
   .container
-    !{schedule}
+    | !{schedule}
     br
-    a.btn.btn-primary(href="http://intranet.regis.org/infocenter/schedule/Print.cfm?StudentCode="+user.code+"&showweek=0&Print=1&NoShading=0") PDF
+    a.btn.btn-primary(href="http://intranet.regis.org/infocenter/schedule/Print.cfm?"+url+"&showweek=0&Print=1&NoShading=0") PDF
   
     
