--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -8,7 +8,7 @@ header
           span.icon-bar
           span.icon-bar
         a#brand.navbar-brand(href="/home")
-          img#ontrac-img(title="Homepage.", src="/images/logo.png")
+          img#ontrac-img(title="Homepage.", src="/images/logo64x64.png")
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li
