--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -76,5 +76,11 @@ block content
           .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="40", aria-valuemin="0", aria-valuemax="100", style="width: 40%")
             span.sr-only 40% ready
     .row
+      .col-xs-12
+        form.form-inline(method="POST", action="/shutdown")
+          .form-group
+            input.form-control(type="password", placeholder="Admin password", name="password", required=true)
+          button.btn.btn-default Force Shutdown
+    .row
       .col-xs-12.text-center
         a.btn.btn-primary(target="_blank", href="https://github.com/Apexal/ontrac") Source Code
