--- a/server/views/home/homepage.jade
+++ b/server/views/home/homepage.jade
@@ -7,7 +7,18 @@ block content
       h1.no-margin(style="text-transform: capitalize")= "Hello, " + (currentUser.nickname !== "none" ? currentUser.nickname : currentUser.fullName)
       p.no-margin.magictime.swashIn.
         It is #[b#clock Time & Date].
-    
+      
+    .row
+      .col-xs-12
+        if nowClass != false
+          if nowClass == "free"
+            h2.no-margin You are in a free period. Use it wisely!
+          else
+            h2.no-margin You should be in #[b= "Room "+nowClass.room] for #[b= nowClass.className] right now! 
+              small The class ends in #{moment().from(nowClass.endTime)}.
+            if nextClass != false
+              p.larger.no-margin Your next class is in #[b= "Room "+nextClass.room] for #[b= nextClass.className] which starts #[b= moment().from(nextClass.startTime)]!
+          hr
     .row
       .col-xs-12
         h3.no-margin Looking to talk with classmates?
