--- a/server/views/home/homepage.jade
+++ b/server/views/home/homepage.jade
@@ -10,14 +10,18 @@ block content
       
     .row
       .col-xs-12
-        if nowClass != false
+        if nowClass !== false
+          if nowClass == "between"
+            p.larger #[b= justEnded.className] has just ended.
+            if justStarted !== false
+              h2 Get to #[b= "Room "+justStarted.room] for #[b= justStarted.className]!
           if nowClass == "free"
-            h2.no-margin You are in a free period. Use it wisely!
-          else
-            h2.no-margin You should be in #[b= "Room "+nowClass.room] for #[b= nowClass.className] right now! 
-              small The class ends in #{moment().from(nowClass.endTime)}.
-          if nextClass != false
-            p.larger.no-margin Your next class is #[b= nextClass.className] in #[b= "Room "+nextClass.room] which starts #[b= moment().from(nextClass.startTime)]!
+            h2 Enjoy your free period! Use it wisely.
+          if nowClass !== "free" && nowClass !== "between"
+            h2 You should currently be in #[b= "Room "+nowClass.room] for #[b= nowClass.className+"!"]
+          
+          if nextClass !== false
+            p.larger #[b(title=moment(nextClass.startTime).format("HH:MM A"), style="text-transform: capitalize;")= moment(nextClass.startTime).fromNow(true)] until #[b= nextClass.className] in #[b= "Room "+nextClass.room].
           hr
     .row
       .col-xs-12
