--- a/server/views/users/profile.jade
+++ b/server/views/users/profile.jade
@@ -80,7 +80,7 @@ block content
                 
       if user.registered
         .row
-          .col-xs-12
+          .col-xs-12.text-center
             if sInfo.nowClass != false
               h3 As of #[b= moment().format("h:mm A")], #{user.firstName}
                 if sInfo.nowClass.className == "Unstructured Time"
