--- a/server/views/home/index.jade
+++ b/server/views/home/index.jade
@@ -68,19 +68,14 @@ block content
         
     .row
       .col-xs-12
-        a(class="twitter-timeline", data-widget-id="268815703732260864", href="https://twitter.com/regisalerts", data-tweet-limit="10") Tweets by @regisalerts
-    .row
-      .col-xs-12
         hr
         .progress
-          .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="40", aria-valuemin="0", aria-valuemax="100", style="width: 40%")
-            span.sr-only 40% ready
+          .progress-bar.progress-bar-striped.active(role="progressbar", aria-valuenow="20", aria-valuemin="0", aria-valuemax="100", style="width: 20%")
+            span.sr-only 20% ready
     .row
-      .col-xs-12
+      .col-xs-12.center
+        br
         form.form-inline(method="POST", action="/shutdown")
           .form-group
             input.form-control(type="password", placeholder="Admin password", name="password", required=true)
           button.btn.btn-default Force Shutdown
-    .row
-      .col-xs-12.text-center
-        a.btn.btn-primary(target="_blank", href="https://github.com/Apexal/ontrac") Source Code
