--- a/server/views/parts/header.jade
+++ b/server/views/parts/header.jade
@@ -12,9 +12,7 @@ header
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
           li
-            a(target="_blank", href="https://github.com/Apexal/ontrac/wiki/About-OnTrac", title="What features does OnTrac provide?") About
-          
-        
+            a(target="_blank", href="https://github.com/Apexal/ontrac/wiki", title="What features does OnTrac provide?") About
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') View 
                 span.caret
@@ -29,7 +27,7 @@ header
                 li(class=(helpers.isPage(page, "courses")))
                   a(href="/courses", title="View, search, and rate a list of all classes, clubs, or otherwise at Regis.") Courses
               li
-                a(target="_blank", href="https://github.com/Apexal/ontrac") Source Code
+                a(target="_blank", title="View the public source code behind this project, maintained solely by me.", href="https://github.com/Apexal/ontrac") Source Code
                 
           li.dropdown
             a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false') Regis Services 
