--- a/server/views/parts/footer.jade
+++ b/server/views/parts/footer.jade
@@ -18,7 +18,8 @@ footer.visible-xs
           li
             a(href="/advisements/chat", title="Private chat room for your advisement!") #{currentUser.advisement} Chat
               span.label.label-default.right#advchat-badge-mobile 0
-          
+          li
+            a(href="/gchat", title="Public chat room for all users!") Global Chat
           if loggedIn
             li
               b(style="color: white;") Online Now
