--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -5,7 +5,7 @@ html
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    //meta(name="description", content="")
+    meta(name="description", content="A free, open-source, web service for the students of Regis High School.")
     meta(name="author", content="Frank Matranga")
     
     if production == false
