Rewrote server-side schedule system again - Much more modular, returns more info - Day's schedule is set on login, not every request

--- a/server/views/home/tabs.jade
+++ b/server/views/home/tabs.jade
@@ -22,7 +22,7 @@ div
             th What
             th Where
         tbody  
-          for s in todayInfo.todays
+          for s in todaysInfo.periods
             tr
               td= moment(s.startTime).format("h:mm A")
               td= s.className
