--- a/server/views/parts/sidebar.jade
+++ b/server/views/parts/sidebar.jade
@@ -18,7 +18,7 @@ aside#sidebar
           a(href="#", title="You will not appear on the online users list.") Offline      
     #scheduleDaySidebar
       hr(style="margin-bottom: 10px;")
-      b Loading...
+      b.larger #{todaysInfo.scheduleDay} - Day
       hr(style="margin-top: 10px;")
     
   section
