--- a/server/views/home/tabs.jade
+++ b/server/views/home/tabs.jade
@@ -1,4 +1,4 @@
-div
+div#tabs
   ul.nav.nav-tabs(role='tablist')
     li.active(role='presentation')
       a(href='#quick-add', aria-controls='work', role='tab', data-toggle='tab') Quick Add
