--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -1,4 +1,5 @@
 #chat-box.small-chat {
+  z-index: 500;
   position: fixed;
   bottom: 0;
   right: 0;
@@ -41,7 +42,9 @@
   width: 80px;
 }
 
-
+#toggle-chat {
+  color: rgb(89, 89, 89);
+}
 
 
 
