--- a/server/views/parts/header.jade
+++ b/server/views/parts/header.jade
@@ -7,7 +7,7 @@ header
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a#brand.navbar-brand(href="/home")
+        a#brand.navbar-brand(href=(helpers.isPage(page, "home") == "active" ? "#" : "/home"))
           img#ontrac-img(title="Homepage.", src="/images/logo64x64.png")
       #navbar.navbar-collapse.collapse
         ul.nav.navbar-nav
